- Fixed: Max own lands bypass with setowner command
- Fixed: War starting in at /wars info not decreasing